# indiestudio

./: CMakeLists.txt  README.txt
app/: main.cpp
include/: IActor.hpp  IBomb.hpp  IBonus.hpp  IMap.hpp  actor.hpp  bigBomb.hpp  bomb.hpp  bonusBomb.hpp  bonusLife.hpp  border.hpp  brick.hpp  core.hpp  game.hpp  grass.hpp  wall.hpp
maps/: base_map.txt  generate_map.py  main_map.txt
src/: core.cpp
src/game/: actor.cpp  game.cpp
src/game/components/: bigBomb.cpp  bomb.cpp  bonusBomb.cpp  bonusLife.cpp  border.cpp  brick.cpp  grass.cpp  wall.cpp
